// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader correctly compiles mixin calls inside imported files: css 1`] = `
"body {
  color: #639;
}
.rule {
  color: #639;
}
main {
  color: #639;
}
"
`;

exports[`loader correctly compiles mixin calls inside imported files: errors 1`] = `Array []`;

exports[`loader correctly compiles mixin calls inside imported files: warnings 1`] = `Array []`;

exports[`loader imports files listed in option "style" package.json: css 1`] = `
".imported-fake-stylus {
  color: #000;
}
.imported-stylus {
  border: 5px;
}
"
`;

exports[`loader imports files listed in option "style" package.json: errors 1`] = `Array []`;

exports[`loader imports files listed in option "style" package.json: warnings 1`] = `Array []`;

exports[`loader imports files listed in option argument and deps: css 1`] = `
".imported-stylus {
  border: 5px;
}
body {
  font: 12px Helvetica, Arial, sans-serif;
}
a.button {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
"
`;

exports[`loader imports files listed in option argument and deps: errors 1`] = `Array []`;

exports[`loader imports files listed in option argument and deps: warnings 1`] = `Array []`;

exports[`loader imports files listed in option argument and paths deps: css 1`] = `
".other {
  font-family: serif;
}
body {
  font: 12px Helvetica, Arial, sans-serif;
}
a.button {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
"
`;

exports[`loader imports files listed in option argument and paths deps: errors 1`] = `Array []`;

exports[`loader imports files listed in option argument and paths deps: warnings 1`] = `Array []`;

exports[`loader imports files listed in option argument and webpack deps: css 1`] = `
".other {
  font-size: 2em;
}
body {
  font: 12px Helvetica, Arial, sans-serif;
}
a.button {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
"
`;

exports[`loader imports files listed in option argument and webpack deps: errors 1`] = `Array []`;

exports[`loader imports files listed in option argument and webpack deps: warnings 1`] = `Array []`;

exports[`loader imports files listed in option argument stylus paths style: css 1`] = `
".other {
  font-family: serif;
}
.imported-stylus {
  border: 5px;
}
"
`;

exports[`loader imports files listed in option argument stylus paths style: errors 1`] = `Array []`;

exports[`loader imports files listed in option argument stylus paths style: warnings 1`] = `Array []`;

exports[`loader imports files listed in option argument webpack style: css 1`] = `
".not-real-nib {
  color: #000;
}
.imported-stylus {
  border: 5px;
}
"
`;

exports[`loader imports files listed in option argument webpack style: errors 1`] = `Array []`;

exports[`loader imports files listed in option argument webpack style: warnings 1`] = `Array []`;

exports[`loader imports files listed in option argument: css 1`] = `
"body {
  background: url(\\"img.png\\");
}
.imported-stylus {
  border: 5px;
}
"
`;

exports[`loader imports files listed in option argument: errors 1`] = `Array []`;

exports[`loader imports files listed in option argument: warnings 1`] = `Array []`;

exports[`loader imports the right file based on context: css 1`] = `
".a-color {
  color: #aaa;
}
.b-color {
  color: #bbb;
}
"
`;

exports[`loader imports the right file based on context: errors 1`] = `Array []`;

exports[`loader imports the right file based on context: warnings 1`] = `Array []`;

exports[`loader in a nested import load module from node_modules: css 1`] = `
".not-real-nib {
  color: #000;
}
"
`;

exports[`loader in a nested import load module from node_modules: errors 1`] = `Array []`;

exports[`loader in a nested import load module from node_modules: warnings 1`] = `Array []`;

exports[`loader in a nested import load module from paths: css 1`] = `
".other {
  font-family: serif;
}
"
`;

exports[`loader in a nested import load module from paths: errors 1`] = `Array []`;

exports[`loader in a nested import load module from paths: warnings 1`] = `Array []`;

exports[`loader in a nested import load module from webpack: css 1`] = `
".other {
  font-size: 2em;
}
"
`;

exports[`loader in a nested import load module from webpack: errors 1`] = `Array []`;

exports[`loader in a nested import load module from webpack: warnings 1`] = `Array []`;

exports[`loader in a nested import resolve css with webpack but not import: css 1`] = `
"@import \\"css.css\\";
"
`;

exports[`loader in a nested import resolve css with webpack but not import: errors 1`] = `Array []`;

exports[`loader in a nested import resolve css with webpack but not import: warnings 1`] = `Array []`;

exports[`loader resolve with webpack if stylus can't find it: css 1`] = `
".other {
  font-size: 2em;
}
"
`;

exports[`loader resolve with webpack if stylus can't find it: errors 1`] = `Array []`;

exports[`loader resolve with webpack if stylus can't find it: warnings 1`] = `Array []`;

exports[`loader resolves css with webpack but does not import it: css 1`] = `
"@import \\"css.css\\";
"
`;

exports[`loader resolves css with webpack but does not import it: errors 1`] = `Array []`;

exports[`loader resolves css with webpack but does not import it: warnings 1`] = `Array []`;

exports[`loader should compile an @import URL through the CSS loader: css 1`] = `
"@import url(\\"http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic\\");
"
`;

exports[`loader should compile an @import URL through the CSS loader: errors 1`] = `Array []`;

exports[`loader should compile an @import URL through the CSS loader: warnings 1`] = `Array []`;

exports[`loader should emit error when unresolved import: errors 1`] = `
Array [
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: /test/fixtures/import-unresolve.styl:1:9",
]
`;

exports[`loader should emit error when unresolved import: warnings 1`] = `Array []`;

exports[`loader should emit warning when use unresolved plugin: errors 1`] = `Array []`;

exports[`loader should emit warning when use unresolved plugin: warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from \`replaced original path\`):
(Emitted value instead of an instance of Error) Error: Stylus plugin 'unresolved' failed to load. Are you sure it's installed?",
]
`;

exports[`loader should import css: css 1`] = `
".imported-css {
  border: 5px;
}
"
`;

exports[`loader should import css: errors 1`] = `Array []`;

exports[`loader should import css: warnings 1`] = `Array []`;

exports[`loader should import stylus: css 1`] = `
".imported-stylus {
  border: 5px;
}
"
`;

exports[`loader should import stylus: errors 1`] = `Array []`;

exports[`loader should import stylus: warnings 1`] = `Array []`;

exports[`loader should not be resolved when url begin with "#": css 1`] = `
"rect {
  cursor: pointer;
  shape-rendering: crispEdges;
  fill: url(\\"#MyGradient\\");
  background-image: url(\\"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath d='M256 40c118.621 0 216 96.075 216 216 0 119.291-96.61 216-216 216-119.244 0-216-96.562-216-216 0-119.203 96.602-216 216-216m0-32C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm-11.49 120h22.979c6.823 0 12.274 5.682 11.99 12.5l-7 168c-.268 6.428-5.556 11.5-11.99 11.5h-8.979c-6.433 0-11.722-5.073-11.99-11.5l-7-168c-.283-6.818 5.167-12.5 11.99-12.5zM256 340c-15.464 0-28 12.536-28 28s12.536 28 28 28 28-12.536 28-28-12.536-28-28-28z'%3E%3C/path%3E%3C/svg%3E\\");
}
"
`;

exports[`loader should not be resolved when url begin with "#": errors 1`] = `Array []`;

exports[`loader should not be resolved when url begin with "#": warnings 1`] = `Array []`;

exports[`loader should work "define" option with raw: css 1`] = `
"section.current-stylus-support {
  raw: \\"hash property access must use brackets\\";
  raw: \\"hash property access must be last in selector :/\\";
  answer: 42;
}
ul.frisbee-golf {
  list-style: disc;
}
section.type-checks {
  castedType: 'object';
  rawType: 'object';
  answer: 42;
  hooray: \\"mixins can work around limits\\";
}
"
`;

exports[`loader should work "define" option with raw: errors 1`] = `Array []`;

exports[`loader should work "define" option with raw: warnings 1`] = `Array []`;

exports[`loader should work "define" option: css 1`] = `
"body {
  width: 100%;
}
"
`;

exports[`loader should work "define" option: errors 1`] = `Array []`;

exports[`loader should work "define" option: warnings 1`] = `Array []`;

exports[`loader should work "include" option: css 1`] = `
".other {
  font-family: serif;
}
.imported-stylus {
  border: 5px;
}
"
`;

exports[`loader should work "include" option: errors 1`] = `Array []`;

exports[`loader should work "include" option: warnings 1`] = `Array []`;

exports[`loader should work "nib": css 1`] = `
"body {
  background: -webkit-linear-gradient(top, #fff, #000);
  background: -moz-linear-gradient(top, #fff, #000);
  background: -o-linear-gradient(top, #fff, #000);
  background: -ms-linear-gradient(top, #fff, #000);
  background: linear-gradient(to bottom, #fff, #000);
}
#back-to-top {
  position: fixed;
  bottom: 0;
  right: 0;
}
"
`;

exports[`loader should work "nib": errors 1`] = `Array []`;

exports[`loader should work "nib": warnings 1`] = `Array []`;

exports[`loader should work "use" option as Array<string>: css 1`] = `
"body {
  font: 12px Helvetica, Arial, sans-serif;
}
a.button {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
"
`;

exports[`loader should work "use" option as Array<string>: errors 1`] = `Array []`;

exports[`loader should work "use" option as Array<string>: warnings 1`] = `Array []`;

exports[`loader should work "use" option: css 1`] = `
"body {
  width: 100%;
}
"
`;

exports[`loader should work "use" option: errors 1`] = `Array []`;

exports[`loader should work "use" option: warnings 1`] = `Array []`;

exports[`loader should work when stylusOptions is function: css 1`] = `
"body {
  width: 100%;
}
"
`;

exports[`loader should work when stylusOptions is function: errors 1`] = `Array []`;

exports[`loader should work when stylusOptions is function: warnings 1`] = `Array []`;

exports[`loader should work: css 1`] = `
"body {
  font: 12px Helvetica, Arial, sans-serif;
}
a.button {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
"
`;

exports[`loader should work: errors 1`] = `Array []`;

exports[`loader should work: warnings 1`] = `Array []`;

exports[`loader shouldn't import css: css 1`] = `
"@import \\"css.css\\";
"
`;

exports[`loader shouldn't import css: errors 1`] = `Array []`;

exports[`loader shouldn't import css: warnings 1`] = `Array []`;

exports[`loader shouldn't process urls: css 1`] = `
"body {
  background: url(\\"img.png\\");
}
"
`;

exports[`loader shouldn't process urls: errors 1`] = `Array []`;

exports[`loader shouldn't process urls: warnings 1`] = `Array []`;

exports[`loader stylus can find modules in node_modules: css 1`] = `
".not-real-nib {
  color: #000;
}
"
`;

exports[`loader stylus can find modules in node_modules: errors 1`] = `Array []`;

exports[`loader stylus can find modules in node_modules: warnings 1`] = `Array []`;

exports[`loader with option, should resolve urls relatively: css 1`] = `
".img {
  content: url(\\"img.png\\");
  background: url(\\"deep/deep-img.png\\");
  background: url(\\"!!deep/deep-img.png\\");
  background: url(\\"file!deep/deep-img.png\\");
  background: url(\\"file?foo!deep/deep-img.png\\");
}
"
`;

exports[`loader with option, should resolve urls relatively: errors 1`] = `Array []`;

exports[`loader with option, should resolve urls relatively: warnings 1`] = `Array []`;

exports[`loader with paths, find deps and load like normal stylus: css 1`] = `
".other {
  font-family: serif;
}
"
`;

exports[`loader with paths, find deps and load like normal stylus: errors 1`] = `Array []`;

exports[`loader with paths, find deps and load like normal stylus: warnings 1`] = `Array []`;
